# reachable-cve

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pygoat_report.json  pygoat_report_v0_3.json  pyproject.toml
.github/workflows/: ci.yml  security.yml
benchmarks/: PYGOAT_REPORT.md  README.md  labels.yml  run.py
class_tests/: app.py
examples/demo_repo/: .reachable-cve.yml  requirements.txt
examples/demo_repo/app/: config.py  unused.py
examples/demo_repo_clean/: requirements.txt
examples/demo_repo_clean/app/: main.py
fastapi_test/: app.py  requirements.txt
getattr_test/: app.py
src/reachable_cve/: cache.py  call_graph.py  cli.py  django_routes.py  engine.py  frameworks.py  github_bot.py  logging_config.py  parser.py  reachability.py  report.py  scorer.py  server.py  symbol_map.yml  taint.py  taint_rules.yml  vulndb.py
taint_test_1/: app.py
taint_test_2/: app.py
tests/: conftest.py  test_cache.py  test_class_resolution.py  test_cvss_extraction.py  test_decision.py  test_decorators.py  test_django_routes.py  test_frameworks.py  test_getattr_resolution.py  test_kev_matching.py  test_logging.py  test_reachability_flip.py  test_reporting.py  test_smoke.py  test_taint_rules.py
tests/fixtures/: kev_sample.json  osv_label_only.json  osv_pyyaml.json  osv_requests.json  osv_vector_only.json
